# example-parquet

./: README.md  df.parquet  load.py  pyproject.toml  store.py
