[tool.poetry]
name = "example-parquet"
version = "0.1.0"
description = ""
authors = ["Chris <cnpryer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.14.12"
pandas = "^1.5.0"
pyarrow = "^9.0.0"
fastparquet = "^0.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
